<resources>
    <string name="app_name">GeekSeries</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="error_invalid_email">Este emailé inválido!</string>
    <string name="error_invalid_password">Senha curta!</string>
    <string name="error_incorrect_password">Senha incorreta!</string>
    <string name="error_field_required">Preencha esse campo!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>

